--- a/Research/Research.html
+++ b/Research/Research.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research - Noelia Bernal Lobato</title>
-    <link rel="stylesheet" href="Style.css">
-    <script defer src="Script.js"></script>
+    <link rel="stylesheet" href="../Style.css">
+    <script defer src="../Script.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 </head>
