--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="main-container">
         <nav class="sidebar">
             <ul>
-                <li class="active"><a href="Index.html" id="home-link"><i class="fas fa-home"></i> Home</a></li>
+                <li class="active"><a href="/Website/index.html" id="home-link"><i class="fas fa-home"></i> Home</a></li>
                 <li>
-                    <a href="CV\CV_Noelia Bernal.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
+                    <a href="/Website/CV/CV_Noelia_Bernal.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
                 </li>
-                <li><a href="Research\Research.html" id="research-link"><i class="fas fa-book"></i> Research</a></li>
-                <li><a href="Teaching\Teaching.html" id="teaching-link"><i class="fas fa-university"></i> Teaching</a></li>
+                <li><a href="/Website/Research/Research.html" id="research-link"><i class="fas fa-book"></i> Research</a></li>
+                <li><a href="/Website/Teaching/Teaching.html" id="teaching-link"><i class="fas fa-university"></i> Teaching</a></li>
             </ul>
         </nav>
         
