--- a/Research/Research.html
+++ b/Research/Research.html
@@ -40,7 +40,7 @@
                             "COVID-19 and economic preferences: Evidence from a panel of cab drivers".
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S2214804324000958?dgcid=rss_sd_all" target="_blank">View Document</a>
-                                <a href="Research\Papers\Aragon Bernal Bosch Molina 2024 Covid and economic preferences.pdf" target="_blank">Download PDF</a>
+                                <a href="\Website\Research\Papers\Aragon Bernal Bosch Molina 2024 Covid and economic preferences.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
@@ -48,7 +48,7 @@
                             "The effects of social pensions on nutrition-related health outcomes of the poor: Quasi-experimental evidence from Peru".
                             <div class="research-buttons">
                                 <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/hec.4806" target="_blank">View Document</a>
-                                <a href="Research\Papers\Bernal Olivera Suhrcke 2024 The effects of social pensions on nutrition‐related health outcomes of the poor.pdf" target="_blank">Download PDF</a>
+                                <a href="\Website\Research\Papers\Bernal Olivera Suhrcke 2024 The effects of social pensions on nutrition‐related health outcomes of the poor.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
