--- a/Research/Research.html
+++ b/Research/Research.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="active"><a href="/Website/index.html" id="home-link"><i class="fas fa-home"></i> Home</a></li>
                 <li>
-                    <a href="/Website/CV/CV Noelia Bernal.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
+                    <a href="/Website/CV/CV_Noelia Bernal.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
                 </li>
                 <li><a href="/Website/Research/Research.html" id="research-link"><i class="fas fa-book"></i> Research</a></li>
                 <li><a href="/Website/Teaching/Teaching.html" id="teaching-link"><i class="fas fa-university"></i> Teaching</a></li>
