--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p>Previously, I served as a consultant for the Inter-American Development Bank, a researcher at the Ministry of Social Affairs in the Netherlands, and a senior economist at BBVA and Peru’s Ministry of Economy and Finance.</p>
                     </div>
                     <div class="about-image">
-                        <img src="Home\foto.jpg" alt="Profile Picture">
+                        <img src="Home\foto_NB.jpeg" alt="Profile Picture">
                     </div>
                 </div>
             </section>
