--- a/Research/Research.html
+++ b/Research/Research.html
@@ -61,7 +61,7 @@
                         </li>
                         <li>
                             Bernal N. and Olivera J. (2020). 
-                            "Choice of Pension Management Fees and Effects on Pension Wealth".
+                            "Choice of Pension Management Fees and Effects on Pension Wealth". <em>Journal of Pension Economics & Finance</em>.
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S0167268120301025" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Olivera 2020 Pension Fees and Wealth.pdf" target="_blank">Download PDF</a>
