--- a/Research/Research.html
+++ b/Research/Research.html
@@ -36,24 +36,24 @@
                     <summary><strong>Papers</strong></summary>
                     <ul>
                         <li>
-                            Fernando M. Aragon, Noelia Bernal, Mariano Bosch, Oswaldo Molina (2024). 
-                            "COVID-19 and economic preferences: Evidence from a panel of cab drivers".
+                            <strong> Fernando M. Aragon, Noelia Bernal, Mariano Bosch, Oswaldo Molina (2024).</strong>
+                            "COVID-19 and economic preferences: Evidence from a panel of cab drivers". <em> Journal of Behavioral and Experimental Economics </em>
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S2214804324000958?dgcid=rss_sd_all" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Aragon Bernal Bosch Molina 2024 Covid and economic preferences.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
-                            Bernal, N., Olivera, J., & Suhrcke, M. (2024). 
-                            "The effects of social pensions on nutrition-related health outcomes of the poor: Quasi-experimental evidence from Peru".
+                            <strong> Bernal, N., Olivera, J., & Suhrcke, M. (2024). </strong>
+                            "The effects of social pensions on nutrition-related health outcomes of the poor: Quasi-experimental evidence from Peru". <em>Health Economics</em>
                             <div class="research-buttons">
                                 <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/hec.4806" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Olivera Suhrcke 2024 The effects of social pensions on nutrition‐related health outcomes of the poor.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
-                            Bernal, N. & Costa-i-Font, J. & Ritter, P. (2022). 
-                            "The Effect of Health Insurance on Child Nutritional Outcomes. Evidence from a Regression Discontinuity Design in Peru".
+                            <strong>Bernal, N. & Costa-i-Font, J. & Ritter, P. (2022). </strong>
+                            "The Effect of Health Insurance on Child Nutritional Outcomes. Evidence from a Regression Discontinuity Design in Peru". <em>IZA Institute of Labor Economics</em>
                             <div class="research-buttons">
                                 <a href="https://www.iza.org/publications/dp/15490/the-effect-of-health-insurance-on-child-nutritional-outcomes-evidence-from-a-regression-discontinuity-design-in-peru" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Costa Ritter 2022 Health Insurance.pdf" target="_blank">Download PDF</a>
@@ -61,7 +61,7 @@
                         </li>
                         <li>
                             <strong> Bernal N. and Olivera J. (2020).</strong> "Choice of Pension Scheme and Financial Literacy".
-        <em>Journal of Pension Economics & Finance</em>.
+        <em>Journal of Economic Behavior & Organization</em>.
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S0167268120301025" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Olivera 2020 Pension Fees and Wealth.pdf" target="_blank">Download PDF</a>
