--- a/Research/Research.html
+++ b/Research/Research.html
@@ -36,8 +36,9 @@
                     <summary><strong>Papers</strong></summary>
                     <ul>
                         <li>
-                            <strong> Fernando M. Aragon, Noelia Bernal, Mariano Bosch, Oswaldo Molina (2024).</strong>
-                            "COVID-19 and economic preferences: Evidence from a panel of cab drivers". <em> Journal of Behavioral and Experimental Economics </em>
+                            <div><strong> Fernando M. Aragon, Noelia Bernal, Mariano Bosch, Oswaldo Molina (2024).</strong></div>
+                            <div>"COVID-19 and economic preferences: Evidence from a panel of cab drivers".</div>
+                            <div><em> Journal of Behavioral and Experimental Economics </em></div>
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S2214804324000958?dgcid=rss_sd_all" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Aragon Bernal Bosch Molina 2024 Covid and economic preferences.pdf" target="_blank">Download PDF</a>
