--- a/Research/Research.html
+++ b/Research/Research.html
@@ -45,24 +45,27 @@
                             </div>
                         </li>
                         <li>
-                            <strong> Bernal, N., Olivera, J., & Suhrcke, M. (2024). </strong>
-                            "The effects of social pensions on nutrition-related health outcomes of the poor: Quasi-experimental evidence from Peru". <em>Health Economics</em>
+                            <div><strong> Bernal, N., Olivera, J., & Suhrcke, M. (2024).</strong></div>
+                            <div>"The effects of social pensions on nutrition-related health outcomes of the poor: Quasi-experimental evidence from Peru".</div>
+                            <div><em>Health Economics</em></div>
                             <div class="research-buttons">
                                 <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/hec.4806" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Olivera Suhrcke 2024 The effects of social pensions on nutrition‐related health outcomes of the poor.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
-                            <strong>Bernal, N. & Costa-i-Font, J. & Ritter, P. (2022). </strong>
-                            "The Effect of Health Insurance on Child Nutritional Outcomes. Evidence from a Regression Discontinuity Design in Peru". <em>IZA Institute of Labor Economics</em>
+                            <div><strong>Bernal, N. & Costa-i-Font, J. & Ritter, P. (2022).</strong></div>
+                            <div>"The Effect of Health Insurance on Child Nutritional Outcomes. Evidence from a Regression Discontinuity Design in Peru".</div>
+                            <div><em>IZA Institute of Labor Economics</em></div>
                             <div class="research-buttons">
                                 <a href="https://www.iza.org/publications/dp/15490/the-effect-of-health-insurance-on-child-nutritional-outcomes-evidence-from-a-regression-discontinuity-design-in-peru" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Costa Ritter 2022 Health Insurance.pdf" target="_blank">Download PDF</a>
                             </div>
                         </li>
                         <li>
-                            <strong> Bernal N. and Olivera J. (2020).</strong> "Choice of Pension Scheme and Financial Literacy".
-        <em>Journal of Economic Behavior & Organization</em>.
+                            <div><strong> Bernal N. and Olivera J. (2020).</strong></div>
+                            <div>"Choice of Pension Scheme and Financial Literacy".</div>
+                            <div> <em>Journal of Economic Behavior & Organization</em>.</div>
                             <div class="research-buttons">
                                 <a href="https://www.sciencedirect.com/science/article/pii/S0167268120301025" target="_blank">View Document</a>
                                 <a href="/Website/Research/Papers/Bernal Olivera 2020 Pension Fees and Wealth.pdf" target="_blank">Download PDF</a>
