--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="Style.css">
     <script defer src="Script.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
 </head>
 <body>
     <header class="header-container">
@@ -33,14 +32,31 @@
                 <hr>
                 <div class="about-container">
                     <div class="about-text">
-                        <p>I am an Associate Professor in the Department of Economics and a Research Fellow at Universidad del Pacífico. I hold a PhD in Economics and MSc degrees in Research in Economics and Economics of Aging Finance, all from Tilburg University (Netherlands). I also earned a bachelor’s degree in Economics from Pontificia Universidad Católica del Perú.</p>
-
-                        <p>My research focuses on public policies, pensions, and labor markets. I have advised governments in Peru, the Netherlands, and Latin America, and my work has been published in leading international journals and policy reports. I am also the author of a book proposing pension system reforms in Peru.</p>
-
-                        <p>Previously, I served as a consultant for the Inter-American Development Bank, a researcher at the Ministry of Social Affairs in the Netherlands, and a senior economist at BBVA and Peru’s Ministry of Economy and Finance.</p>
+                        <p>
+                            I am an <strong>Associate Professor</strong> in the Department of Economics at <strong>Universidad del Pacífico (UP)</strong>. I hold 
+                            a Ph.D. in Economics and a Master’s in Economics and Financing of Aging, both from <strong>Tilburg University</strong>, as well as a 
+                            Bachelor’s in Economics from <strong>Pontificia Universidad Católica of Peru (PUCP)</strong>.
+                        </p>
+                        <p>
+                            Throughout my career, I have taught at various universities and conducted research and policy analysis across multiple 
+                            institutions and countries. My primary expertise lies in evaluating the impact of public policies on <strong>pensions</strong>, <strong>health</strong> and the 
+                            <strong>well-being of vulnerable populations</strong>. My research focuses on the effects of <strong>social health insurance</strong> on workers, 
+                            the impact of <strong>social pensions</strong> on the elderly, and the influence of <strong>childcare programs</strong> on maternal mental health.
+                        </p>
+                        <p>
+                            I have also led <strong>Randomized Control Trials (RCTs)</strong> on retirement and financial savings, funded by organizations such as 
+                            <strong>Innovation for Poverty Action (IPA)</strong>, the <strong>Inter-American Development Bank (IDB)</strong>, and UP. My work has been published in 
+                            prestigious academic journals, collective volume chapters, and one book.
+                        </p>
+                        <p>
+                            Beyond academia, I have substantial experience as a <strong>policy-maker</strong> and <strong>international consultant</strong>. I played a key role in leading 
+                            <strong>pension reforms</strong> while working for Peru’s <strong>Ministry of Economy and Finance</strong> and have recently advised the 
+                            <strong>Economic Commission for Latin America and the Caribbean (ECLAC)</strong> on pension policy projects and recommendations for 
+                            various Latin America and the Caribbean (LAC) countries.
+                        </p>
                     </div>
                     <div class="about-image">
-                        <img src="Home\foto_NB.jpeg" alt="Profile Picture">
+                        <img src="Home/foto_NB.jpeg" alt="Profile Picture">
                     </div>
                 </div>
             </section>
