--- a/Research/Research.html
+++ b/Research/Research.html
@@ -155,7 +155,23 @@
                             </div>
                         </li>
                     </ul>
-                </details>                
+                </details> 
+
+                <!-- Menú desplegable para Working Papers -->
+                <details>
+                    <summary><strong>Working Papers</strong></summary>
+                    <ul>
+                        <li>
+                            <div><strong>Noelia Bernal, Sebastian Galiani, and Oswaldo Molina (2025).</strong></div>
+                            <div>"Does Matching Contribution Incentivize Informal Workers to Participate in Retirement Saving Plans? A Randomized Evaluation Interacted with a Natural Experiment".</div>
+                            <div><em>NBER Working Paper No. 33925</em></div>
+                            <div class="research-buttons">
+                                <a href="https://www.nber.org/papers/w33925" target="_blank">View Document</a>
+                                <a href="/Website/Research/WorkingPapers/Bernal Galiani Molina 2025 Matching Contribution Informal Workers.pdf" target="_blank">Download PDF</a>
+                            </div>
+                        </li>
+                    </ul>
+                </details>
             </section>            
         </main>
     </div>
