--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li class="active"><a href="/Website/index.html" id="home-link"><i class="fas fa-home"></i> Home</a></li>
                 <li>
-                    <a href="https://nbernall.github.io/Website/CV/CV_Noelia%20Bernal.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
+                    <a href="https://nbernall.github.io/Website/CV/CV_Noelia%20Bernal%20June2025.pdf" target="_blank" id="cv-link"><i class="fas fa-graduation-cap"></i> CV</a>
                 </li>
                 <li><a href="/Website/Research/Research.html" id="research-link"><i class="fas fa-book"></i> Research</a></li>
                 <li><a href="/Website/Teaching/Teaching.html" id="teaching-link"><i class="fas fa-university"></i> Teaching</a></li>
